<resources>
    <string name="app_name">My Application</string>
    <string name="text_button_sum">Суммировать</string>
    <string name="text_button_mult">Умножить</string>
    <string name="text_for_num1">Число 1</string>
    <string name="text_for_num2">Число 2</string>
    <string name="text_result">Результат</string>
    <string name="hint_value">Значение</string>
    <string name="text_open_link">Открыть ссылку</string>
    <string name="text_button_open_link">Открыть ссылку</string>
    <string name="value_result">Результат: </string>
    <string name="text_button_start">Старт</string>
    <string name="text_button_stop">Стоп</string>
    <string name="text_button_reset">Сброс</string>
    <string name="text_button_call_timer">Таймер</string>
    <string name="list">Список</string>
    <string-array name="options">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>