<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_functional_fragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_for_num1"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        />

    <EditText
        android:id="@+id/num1_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint_value"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_for_num2"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        />

    <EditText
        android:id="@+id/num2_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:ems="10"
        android:hint="@string/hint_value"
        android:inputType="number" />

    <TextView
        android:id="@+id/result_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_result"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        />

    <Button
        android:id="@+id/button_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_mult"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        />

</LinearLayout>